--- a/index.html
+++ b/index.html
@@ -6,14 +6,178 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2324</title>
+	<title>Dames overzicht</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2324</h1>
+
+	<header>
+
+		<button><img src= "" alt="" />Menu</button>
+
+		<nav>
+			<button><img src= "" alt="" />Sluit</button>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+
+		<img src="" alt="">
+
+			<ul>
+				<li>
+					<a href="">Jassen</a>
+				</li>
+				<li>
+					<a href="">Shop voor de feestdagen</a>
+				</li>
+				<li>
+					<a href="">New</a>
+				</li>
+				<li>
+					<a href="">Kleding</a>
+				</li>
+				<li>
+					<a href="">Lingerie</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<section>
+			<h1>Dames</h1>
+
+				<ul>
+					<li><a href=""></a></li>
+					<li><a href=""></a></li>
+					<li><a href=""></a></li>
+					<li><a href=""></a></li>
+					<li><a href=""></a></li>
+				</ul>
+		</section>
+
+
+		<section>
+			<h2>-20% op tops</h2>
+				<img src="images/paarsetrui.webp" alt="paarse trui">
+				<p>Online</p>
+				<p>Met uitzondering van lingerie en blazers.</p>
+
+				<a href="">Truien shoppen</a>
+				<a href="">Shop sweatshirts</a>
+		</section>
+
+		<section>	
+			<h2>Word gratis member en krijg 10% welkomstbonus*</h2>
+
+				<a href="">Nu member worden</a>
+				<p>*Ga voor informatie over de voorwaarden van ons klantprogramma naar <a href="">www.c-a.com/foryou</a></p>
+		</section>	
+
+		<Section>
+			<h3>Perfecte cadeaus onder de 50 €</h3>
+
+				<ul>
+					<li>
+						<img src="images/kerstsokken.jpg" alt="">
+						<p>Cadeaus tot 10 €</p>
+					</li>
+
+					<li>
+						<img src="images/kerstpyjama.jpg" alt="">
+						<p>Cadeaus tot 20 €</p>
+					</li>
+
+					<li>
+						<img src="images/kerstcadeautjes.jpg" alt="">
+						<p>Cadeaus tot 20 €</p>
+					</li>
+				</ul>
+		</Section>
+
+		<Section>
+			<h3>Dameskleding: de juiste outfit voor iedere gelegenheid</h3>
+				
+				<p>
+					We hebben het allemaal wel eens meegemaakt: de schrik die je krijgt als je plotsklaps wordt uitgenodigd voor een groot feest. 
+					Want wat moet je aan? En is je budget wel toereikend? Gelukkig kun je in onze online shop voordelig terecht voor allerlei hippe party outfits. 
+					Maar ook voor je dagelijkse kleding, je vakantietenue of je zakelijke look hebben wij de juiste items. Je hoeft dus geen moment meer te twijfelen voor je kledingkast. 
+					Ontdek gewoon onze collectie en weg zijn je zorgen over wat je aan moet trekken.
+				</p>
+
+				<a href="">Toon meer</a>
+		</Section>
+	</main>
+
+	<footer>
+			<!-- Uitklapmenu's -->
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+
+			<a href="">Nederland|NL</a>
+			<a href=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""></a>
+
+			<!-- list met social media icoontjes// -->
+			<ul>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+			</ul>
+
+			<ul>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+			</ul>
+
+			<ul>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+				<li>
+					<a href=""></a>
+				</li>
+			</ul>
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
