--- a/detailpagina.html
+++ b/detailpagina.html
@@ -17,17 +17,31 @@
 
 <body>
     <header>
+        <ul>
+			<li><a href="#">Dames</a></li>
+			<li><a href="#">Heren</a></li>
+			<li><a href="#">CLOCKHOUSE</a></li>
+			<li><a href="#">Kids</a></li>
+			<li><a href="#">Baby's</a></li>
+			<li><a href="#">Sale</a></li>
+		</ul>
 
         <button><img src= "" alt="" />Menu</button>
 
         <nav>
             <button><img src= "" alt="" />Sluit</button>
-
-            <ul>
-                <li></li>
-				<li></li>
-				<li></li>
-            </ul>
+        <ul>
+            <li><a href="https://www.c-and-a.com/nl/nl/shop/dames">Dames overzicht</a></li>
+            <li><a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-jassen">Jassen</a></li>
+            <li><a href="#">Shop voor de feestdagen</a></li>
+            <li><a href="https://www.c-and-a.com/nl/nl/shop/dames-nieuw-in-kleding">New</a></li>
+            <li><a href="#">Kleding</a></li>
+            <li><a href="#">Lingerie</a></li>
+            <li><a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-lingerie">Accessoires & schoenen</a></li>
+            <li><a href="#">Grote maten</a></li>
+            <li><a href="#">Zwangerschapskleding</a></li>
+            <li><a href="https://www.c-and-a.com/nl/nl/shop/sale-dames">Sale</a></li>
+          </ul>
         </nav>
     </header>
 
@@ -35,7 +49,7 @@
 
 
     <main>
-        <section>
+        <article>
             <h1>Spijkerrok</h1>
 
             <p>29,99 €</p>
@@ -64,7 +78,7 @@
                 <li>Gratis standaard verzending vanaf 29 € & gratis levering in een C&A winkel vanaf 19€</li>
                 <li>Betaling via iDEAL, factuur, creditcard, of PayPal</li>
             </ul>
-        </section>
+        </article>
 
 
         <section>
@@ -87,27 +101,29 @@
 
 
         <section>
-            <ul>
-                <li>
-                    <a href=""></a>
-                </li>
-                <li>
-                    <a href=""></a>
-                </li>
-                <li>
-                    <a href=""></a>
-                </li>
-                <li>
-                    <a href=""></a>
-                </li>
-            </ul>
+            <nav>
+                <ol>
+                    <li>
+                        <a href=""></a>
+                    </li>
+                    <li>
+                        <a href=""></a>
+                    </li>
+                    <li>
+                        <a href=""></a>
+                    </li>
+                    <li>
+                        <a href=""></a>
+                    </li>
+                </ol>
+            </nav>
 
             <img src="" alt="">
 
             <p>Schrijf je nu in - members krijgen 10% korting* op hun volgende aankoop!</p>
             <p>Schrijf je in voor onze nieuwsbrief en ontvang 10% korting op je volgende aankoop.</p>
 
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input type= "email">
         </section>
     </main>
 
