--- a/index.html
+++ b/index.html
@@ -12,73 +12,68 @@
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
-<body>
+<body class="overzichtpagina">
 
 	<header>
 
+
+		<!-- Menu -->
 		<button><img src= "" alt="" />Menu</button>
 
 		<nav>
-			<button><img src= "" alt="" />Sluit</button>
+			<button><img src= "https://assets.codepen.io/274456/ui-icon-cross.svg" alt="" />Sluit</button>
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href="#">Dames</a></li>
+				<li><a href="#">Heren</a></li>
+				<li><a href="#">CLOCKHOUSE</a></li>
+				<li><a href="#">Kids</a></li>
+				<li><a href="#">Baby's</a></li>
+				<li><a href="#">Sale</a></li>
 			</ul>
+			</nav>
+
+
 
 		<img src="" alt="">
 
-			<ul>
-				<li>
-					<a href="">Jassen</a>
-				</li>
-				<li>
-					<a href="">Shop voor de feestdagen</a>
-				</li>
-				<li>
-					<a href="">New</a>
-				</li>
-				<li>
-					<a href="">Kleding</a>
-				</li>
-				<li>
-					<a href="">Lingerie</a>
-				</li>
-			</ul>
-		</nav>
+
 	</header>
 
 	<main>
 		<section>
 			<h1>Dames</h1>
 
-				<ul>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-					<li><a href=""></a></li>
-				</ul>
-		</section>
+			<ul>
+				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames">Dames</a></li>
+				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-jassen">Jassen</a></li>
+				<li><a href="#">Shop voor de feestdagen</a></li>
+				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames-nieuw-in-kleding">New</a></li>
+				<li><a href="#">Kleding</a></li>
+				<li><a href="#">Lingerie</a></li>
+				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-lingerie">Accessoires & schoenen</a></li>
+				<li><a href="#">Grote maten</a></li>
+				<li><a href="#">Zwangerschapskleding</a></li>
+				<li><a href="https://www.c-and-a.com/nl/nl/shop/sale-dames">Sale</a></li>
+			  </ul>
+			</section>
 
 
-		<section>
+		<article>
 			<h2>-20% op tops</h2>
-				<img src="images/paarsetrui.webp" alt="paarse trui">
+				<img src="images/homepage1.jpg" alt="afbeelding van 2 vrouwen">
 				<p>Online</p>
 				<p>Met uitzondering van lingerie en blazers.</p>
 
 				<a href="">Truien shoppen</a>
 				<a href="">Shop sweatshirts</a>
-		</section>
+		</article>
 
-		<section>	
+		<article>	
 			<h2>Word gratis member en krijg 10% welkomstbonus*</h2>
 
 				<a href="">Nu member worden</a>
 				<p>*Ga voor informatie over de voorwaarden van ons klantprogramma naar <a href="">www.c-a.com/foryou</a></p>
-		</section>	
+		</article>	
 
 		<Section>
 			<h3>Perfecte cadeaus onder de 50 €</h3>
@@ -101,7 +96,7 @@
 				</ul>
 		</Section>
 
-		<Section>
+		<article>
 			<h3>Dameskleding: de juiste outfit voor iedere gelegenheid</h3>
 				
 				<p>
@@ -112,13 +107,15 @@
 				</p>
 
 				<a href="">Toon meer</a>
-		</Section>
+			</article>
 	</main>
 
 	<footer>
 			<!-- Uitklapmenu's -->
+
+
 			<ul>
-				<li></li>
+				<li>blabla</li>
 				<li></li>
 				<li></li>
 			</ul>
@@ -150,31 +147,31 @@
 
 			<ul>
 				<li>
-					<a href=""></a>
+					<a href="#">Algemene voorwaarden</a>
 				</li>
 				<li>
-					<a href=""></a>
+					<a href="">Gegevensbescherming</a>
 				</li>
 				<li>
-					<a href=""></a>
+					<a href="">Over C&A Online</a>
 				</li>
 				<li>
-					<a href=""></a>
+					<a href="">Cookie-instellingen</a>
 				</li>
 			</ul>
 
 			<ul>
 				<li>
-					<a href=""></a>
+					<a href="">Gewatteerde Jassen</a>
 				</li>
 				<li>
-					<a href=""></a>
+					<a href="">Party outfits voor heren</a>
 				</li>
 				<li>
-					<a href=""></a>
+					<a href="">Koopgids: Overgangsjassen</a>
 				</li>
 				<li>
-					<a href=""></a>
+					<a href="">A-lijn jurken</a>
 				</li>
 			</ul>
 	</footer>
