--- a/index.html
+++ b/index.html
@@ -75,26 +75,23 @@
 				<p>*Ga voor informatie over de voorwaarden van ons klantprogramma naar <a href="">www.c-a.com/foryou</a></p>
 		</article>	
 
-		<Section>
+		<section>
 			<h3>Perfecte cadeaus onder de 50 €</h3>
+			<section>
+				<img src="images/kerstsokken.jpg" alt="">
+				<p>Cadeaus tot 10 €</p>
+			</section>
 
-				<ul>
-					<li>
-						<img src="images/kerstsokken.jpg" alt="">
-						<p>Cadeaus tot 10 €</p>
-					</li>
+			<section>
+				<img src="images/kerstpyjama.jpg" alt="">
+				<p>Cadeaus tot 20 €</p>
+			</section>
 
-					<li>
-						<img src="images/kerstpyjama.jpg" alt="">
-						<p>Cadeaus tot 20 €</p>
-					</li>
-
-					<li>
-						<img src="images/kerstcadeautjes.jpg" alt="">
-						<p>Cadeaus tot 20 €</p>
-					</li>
-				</ul>
-		</Section>
+			<section>
+				<img src="images/kerstcadeautjes.jpg" alt="">
+				<p>Cadeaus tot 20 €</p>
+			</section>
+		</section>
 
 		<article>
 			<h3>Dameskleding: de juiste outfit voor iedere gelegenheid</h3>
