--- a/detailpagina.html
+++ b/detailpagina.html
@@ -15,10 +15,12 @@
 <body>
     <header>
 
+		<!-- menu -->
         <nav>
             <button><img src= "./images/menu.png" alt=""/></button>
 			<img src="./images/CA_logo.png" alt="">
 
+			<!-- Navigatiebalk -->
 			<ul>
 				<li>
 					<a href="">
@@ -43,32 +45,33 @@
 			</ul>
         </nav>
 
+		<!-- Verborgen menu -->
         <nav>
 			<button><img src= "./images/kruisje.png" alt="Menu sluiten" /></button>
 			<ul aria-hidden="true">
 				<li>
 					<a href="#">Dames</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Heren</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">CLOCKHOUSE</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Kids</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Baby's</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Sale</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 			</ul>
 		</nav>
@@ -102,8 +105,8 @@
 
             <!-- Maat kiezen -->
 
-			<Button>Kies maat</Button>
-            <Button>In het winkelmandje</Button>
+			<button>Kies maat</button>
+            <button>In het winkelmandje</button>
 
             <p>Levertijd 3-4 dagen</p>
 
@@ -177,8 +180,7 @@
 
 
 
-
-
+<!-- footer -->
         <footer>
 			<ul>
 				<li>
@@ -202,82 +204,82 @@
 	
 			<ul>
 				<li>
-					<a href="#"><img src="./images/Paypal.png" alt="Paypal afbeelding"></a>
+					<a href="./index.html"><img src="./images/Paypal.png" alt="Paypal afbeelding"></a>
 				</li>
 				<li>			
-					<a href="#"><img src="./images/Mastercard.png" alt="Mastercard afbeelding"></a>
+					<a href="./index.html"><img src="./images/Mastercard.png" alt="Mastercard afbeelding"></a>
 				</li>
 				<li>
-					<a href="#"><img src="./images/Visa.png" alt="Visa afbeelding"></a>
+					<a href="./index.html"><img src="./images/Visa.png" alt="Visa afbeelding"></a>
 				</li>			
 				<li>
-					<a href="#"><img src="./images/AMEX.png" alt="Amex afbeelding"></a>
+					<a href="./index.html"><img src="./images/AMEX.png" alt="Amex afbeelding"></a>
 				</li>
 				<li>
-					<a href="#"><img src="./images/iDeal.png" alt="iDeal afbeelding"></a>
+					<a href="./index.html"><img src="./images/iDeal.png" alt="iDeal afbeelding"></a>
 				</li>
 				<li>
-					<a href="#"><img src="./images/Rechnung-NL.png" alt="Rechnung NL afbeelding"></a>
+					<a href="./index.html"><img src="./images/Rechnung-NL.png" alt="Rechnung NL afbeelding"></a>
 				</li>
 				<li>
-					<a href="#">	<img src="./images/Post_NL.png" alt="Post NL afbeelding"></a>
+					<a href="./index.html">	<img src="./images/Post_NL.png" alt="Post NL afbeelding"></a>
 				</li>
 				<li>
-					<a href="#">	<img src="./images/DHL.png" alt="DHL afbeelding"></a>
+					<a href="./index.html">	<img src="./images/DHL.png" alt="DHL afbeelding"></a>
 				</li>
 				<li>
-					<a href="#">	<img src="./images/CA_Filiale_NL.png" alt="C&A filiaal afbeelding"></a>
-				</li>
-			</ul>
-	
-			<ul>
-				<li>
-					<a href=""><img src="./images/Facebook.svg" alt="Facebook icoontje"></a>
-				</li>
-				<li>
-					<a href=""><img src="./images/Pinterest.svg" alt="Pinterest icoontje"></a>
-				</li>
-				<li>
-					<a href=""><img src="./images/Youtube.svg" alt="Youtube icoontje"></a>
-				</li>
-				<li>
-					<a href=""><img src="./images/Instagram.svg" alt="Instagram icoontje"></a>
-				</li>
-				<li>
-					<a href=""><img src="./images/tiktok.svg" alt="Tiktok icoontje"></a>
-				</li>
-				<li>
-					<a href=""><img src="./images/linkedin.svg" alt="Linkedin icoontje"></a>
+					<a href="./index.html">	<img src="./images/CA_Filiale_NL.png" alt="C&A filiaal afbeelding"></a>
 				</li>
 			</ul>
 	
 			<ul>
 				<li>
-					<a href="">Algemene voorwaarden</a>
+					<a href="./index.html"><img src="./images/Facebook.svg" alt="Facebook icoontje"></a>
 				</li>
 				<li>
-					<a href="">Gegevensbescherming</a>
+					<a href="./index.html"><img src="./images/Pinterest.svg" alt="Pinterest icoontje"></a>
 				</li>
 				<li>
-					<a href="">Over C&A Online</a>
+					<a href="./index.html"><img src="./images/Youtube.svg" alt="Youtube icoontje"></a>
 				</li>
 				<li>
-					<a href="">Cookie-instellingen</a>
+					<a href="./index.html"><img src="./images/Instagram.svg" alt="Instagram icoontje"></a>
+				</li>
+				<li>
+					<a href="./index.html"><img src="./images/tiktok.svg" alt="Tiktok icoontje"></a>
+				</li>
+				<li>
+					<a href="./index.html"><img src="./images/linkedin.svg" alt="Linkedin icoontje"></a>
 				</li>
 			</ul>
 	
 			<ul>
 				<li>
-					<a href="">Gewatteerde Jassen</a>
+					<a href="./index.html">Algemene voorwaarden</a>
 				</li>
 				<li>
-					<a href="">Party outfits voor heren</a>
+					<a href="./index.html">Gegevensbescherming</a>
 				</li>
 				<li>
-					<a href="">Koopgids: Overgangsjassen</a>
+					<a href="./index.html">Over C&A Online</a>
 				</li>
 				<li>
-					<a href="">A-lijn jurken</a>
+					<a href="./index.html">Cookie-instellingen</a>
+				</li>
+			</ul>
+	
+			<ul>
+				<li>
+					<a href="./index.html">Gewatteerde Jassen</a>
+				</li>
+				<li>
+					<a href="./index.html">Party outfits voor heren</a>
+				</li>
+				<li>
+					<a href="./index.html">Koopgids: Overgangsjassen</a>
+				</li>
+				<li>
+					<a href="./index.html">A-lijn jurken</a>
 				</li> 
 			</ul>
 	
