--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<button><img src= "./images/menu.png" alt="Hamburgermenu"/></button>
 			<img src="./images/CA_logo.png" alt="Het C&A logo">
  
+			<!-- Navigatiebalk -->
 			<ul>
 				<li>
 					<a href="">
@@ -44,32 +45,33 @@
 			</ul>
 		</nav>
 
+		<!-- verborgen menu -->
 		<nav>
 			<button><img src= "./images/kruisje.png" alt="Menu sluiten" /></button>
 			<ul aria-hidden="true">
 				<li>
 					<a href="#">Dames</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Heren</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">CLOCKHOUSE</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Kids</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Baby's</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 				<li>
 					<a href="#">Sale</a>
-					<img src="./images/arrow.png" alt="Pijl voor een uitgebreider overzicht">
+					<img src="./images/arrow.png" alt="">
 				</li>
 			</ul>
 		</nav>
@@ -81,57 +83,60 @@
 			<h1>Dames</h1>
 
 			<ul>
-				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-jassen">Jassen</a></li>
-				<li><a href="#">Shop voor de feestdagen</a></li>
-				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames-nieuw-in-kleding">New</a></li>
-				<li><a href="#">Kleding</a></li>
-				<li><a href="#">Lingerie</a></li>
-				<li><a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-lingerie">Accessoires & schoenen</a></li>
-				<li><a href="#">Grote maten</a></li>
-				<li><a href="#">Zwangerschapskleding</a></li>
-				<li><a href="https://www.c-and-a.com/nl/nl/shop/sale-dames">Sale</a></li>
+				<li><a href="./detailpagina.html">Jassen</a></li>
+				<li><a href="./detailpagina.html">Shop voor de feestdagen</a></li>
+				<li><a href="./detailpagina.html">New</a></li>
+				<li><a href="./detailpagina.html">Kleding</a></li>
+				<li><a href="./detailpagina.html">Lingerie</a></li>
+				<li><a href="./detailpagina.html">Accessoires & schoenen</a></li>
+				<li><a href="./detailpagina.html">Grote maten</a></li>
+				<li><a href="./detailpagina.html">Zwangerschapskleding</a></li>
+				<li><a href="./detailpagina.html">Sale</a></li>
 			  </ul>
 			</section>
 
-
+			<!-- eerste blok -->
 		<article>
 			<h2>-20% op tops</h2>
 				<img src="images/homepage1.jpg" alt="afbeelding van 2 vrouwen in chique kleding">
 				<p>Online</p>
 				<p>Met uitzondering van lingerie en blazers.</p>
 
-				<a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-truien-vesten">Truien shoppen</a>
-				<a href="https://www.c-and-a.com/nl/nl/shop/dames-kleding-truien-vesten-sweatshirts">Shop sweatshirts</a>
+				<a href="./detailpagina.html">Truien shoppen</a>
+				<a href="./detailpagina.html">Shop sweatshirts</a>
 		</article>
 
+		<!-- tweede blok -->
 		<article>	
 			<h2>Word gratis member en krijg 10% welkomstbonus*</h2>
 
-				<a href="https://www.c-and-a.com/nl/nl/shop/foryou">Nu member worden</a>
-				<p>*Ga voor informatie over de voorwaarden van ons klantprogramma naar <a href="https://www.c-and-a.com/nl/nl/shop/foryou">www.c-a.com/foryou</a></p>
+				<a href="./detailpagina.html">Nu member worden</a>
+				<p>*Ga voor informatie over de voorwaarden van ons klantprogramma naar <a href="./detailpagina.html">www.c-a.com/foryou</a></p>
 		</article>	
 
+		<!-- blok met kerst scrollblok -->
 		<Section>
 			<h3>Perfecte cadeaus onder de 50 €</h3>
 
 				<ul>
 					<li>
-						<a href=""><img src="images/kerstsokken.jpg" alt="Kerstsokken"></a>
+						<a href="./detailpagina.html"><img src="images/kerstsokken.jpg" alt="afbeelding kerstsokken tot 10 euro"></a>
 						<p>Cadeaus tot 10 €</p>
 					</li>
 
 					<li>
-						<a href=""><img src="images/kerstpyjama.jpg" alt="Kerstpyjama's"></a>
+						<a href="./detailpagina.html"><img src="images/kerstpyjama.jpg" alt="afbeelding kerstpyjama's tot 20 euro"></a>
 						<p>Cadeaus tot 20 €</p>
 					</li>
 
 					<li>
-						<a href=""><img src="images/kerstcadeautjes.jpg" alt="Kerstcadeautjes"></a>
+						<a href="./detailpagina.html"><img src="images/kerstcadeautjes.jpg" alt="afbeelding kerstcadeaus tot 20 euro"></a>
 						<p>Cadeaus tot 20 €</p>
 					</li>
 				</ul>
 		</Section>
 
+		<!-- laatste blok -->
 		<article>
 			<h3>Dameskleding: de juiste outfit voor iedere gelegenheid</h3>
 				
@@ -146,6 +151,7 @@
 			</article>
 	</main>
 
+	<!-- Footer -->
 	<footer>
 
 		<ul>
@@ -170,82 +176,82 @@
 
 		<ul>
 			<li>
-				<a href="#"><img src="./images/Paypal.png" alt="Paypal afbeelding"></a>
+				<a href="./detailpagina.html"><img src="./images/Paypal.png" alt="Paypal afbeelding"></a>
 			</li>
 			<li>			
-				<a href="#"><img src="./images/Mastercard.png" alt="Mastercard afbeelding"></a>
+				<a href="./detailpagina.html"><img src="./images/Mastercard.png" alt="Mastercard afbeelding"></a>
 			</li>
 			<li>
-				<a href="#">	<img src="./images/Visa.png" alt="Visa afbeelding"></a>
+				<a href="./detailpagina.html">	<img src="./images/Visa.png" alt="Visa afbeelding"></a>
 			</li>			
 			<li>
-				<a href="#">	<img src="./images/AMEX.png" alt="Amex afbeelding"></a>
+				<a href="./detailpagina.html">	<img src="./images/AMEX.png" alt="Amex afbeelding"></a>
 			</li>
 			<li>
-				<a href="#">	<img src="./images/iDeal.png" alt="iDeal afbeelding"></a>
+				<a href="./detailpagina.html">	<img src="./images/iDeal.png" alt="iDeal afbeelding"></a>
 			</li>
 			<li>
-				<a href="#">	<img src="./images/Rechnung-NL.png" alt="Rechnung NL afbeelding"></a>
+				<a href="./detailpagina.html">	<img src="./images/Rechnung-NL.png" alt="Rechnung NL afbeelding"></a>
 			</li>
 			<li>
-				<a href="#">	<img src="./images/Post_NL.png" alt="Post NL afbeelding"></a>
+				<a href="./detailpagina.html">	<img src="./images/Post_NL.png" alt="Post NL afbeelding"></a>
 			</li>
 			<li>
-				<a href="#">	<img src="./images/DHL.png" alt="DHL afbeelding"></a>
+				<a href="./detailpagina.html">	<img src="./images/DHL.png" alt="DHL afbeelding"></a>
 			</li>
 			<li>
-				<a href="#">	<img src="./images/CA_Filiale_NL.png" alt="C&A filiaal afbeelding"></a>
-			</li>
-		</ul>
-
-		<ul>
-			<li>
-				<a href=""><img src="./images/Facebook.svg" alt="Facebook icoontje"></a>
-			</li>
-			<li>
-				<a href=""><img src="./images/Pinterest.svg" alt="Pinterest icoontje"></a>
-			</li>
-			<li>
-				<a href=""><img src="./images/Youtube.svg" alt="Youtube icoontje"></a>
-			</li>
-			<li>
-				<a href=""><img src="./images/Instagram.svg" alt="Instagram icoontje"></a>
-			</li>
-			<li>
-				<a href=""><img src="./images/tiktok.svg" alt="Tiktok icoontje"></a>
-			</li>
-			<li>
-				<a href=""><img src="./images/linkedin.svg" alt="Linkedin icoontje"></a>
+				<a href="./detailpagina.html">	<img src="./images/CA_Filiale_NL.png" alt="C&A filiaal afbeelding"></a>
 			</li>
 		</ul>
 
 		<ul>
 			<li>
-				<a href="">Algemene voorwaarden</a>
+				<a href="./detailpagina.html"><img src="./images/Facebook.svg" alt="Facebook icoontje"></a>
 			</li>
 			<li>
-				<a href="">Gegevensbescherming</a>
+				<a href="./detailpagina.html"><img src="./images/Pinterest.svg" alt="Pinterest icoontje"></a>
 			</li>
 			<li>
-				<a href="">Over C&A Online</a>
+				<a href="./detailpagina.html"><img src="./images/Youtube.svg" alt="Youtube icoontje"></a>
 			</li>
 			<li>
-				<a href="">Cookie-instellingen</a>
+				<a href="./detailpagina.html"><img src="./images/Instagram.svg" alt="Instagram icoontje"></a>
+			</li>
+			<li>
+				<a href="./detailpagina.html"><img src="./images/tiktok.svg" alt="Tiktok icoontje"></a>
+			</li>
+			<li>
+				<a href="./detailpagina.html"><img src="./images/linkedin.svg" alt="Linkedin icoontje"></a>
 			</li>
 		</ul>
 
 		<ul>
 			<li>
-				<a href="">Gewatteerde Jassen</a>
+				<a href="./detailpagina.html">Algemene voorwaarden</a>
 			</li>
 			<li>
-				<a href="">Party outfits voor heren</a>
+				<a href="./detailpagina.html">Gegevensbescherming</a>
 			</li>
 			<li>
-				<a href="">Koopgids: Overgangsjassen</a>
+				<a href="./detailpagina.html">Over C&A Online</a>
 			</li>
 			<li>
-				<a href="">A-lijn jurken</a>
+				<a href="./detailpagina.html">Cookie-instellingen</a>
+			</li>
+		</ul>
+
+		<ul>
+			<li>
+				<a href="./detailpagina.html">Gewatteerde Jassen</a>
+			</li>
+			<li>
+				<a href="./detailpagina.html">Party outfits voor heren</a>
+			</li>
+			<li>
+				<a href="./detailpagina.html">Koopgids: Overgangsjassen</a>
+			</li>
+			<li>
+				<a href="./detailpagina.html">A-lijn jurken</a>
 			</li> 
 		</ul>
 
